These are the release notes for the Live Translate extension.
	
Extension page on mediawiki.org: http://www.mediawiki.org/wiki/Extension:Live_Translate
Latest version of the release notes: http://svn.wikimedia.org/viewvc/mediawiki/trunk/extensions/LiveTranslate/RELEASE-NOTES?view=co


=== Version 1.2 ===
2011-xx-xx

* Added TMX admin user rights group.

=== Version 1.1.1 ===
2011-06-22

* Fixed Internet Explorer compatibility issue.
* Fixed bug in Microsoft transltion script for MW < 1.17.
* Made Microsoft transltion script more robust by adding timeouts.

=== Version 1.1 ===
2011-06-16

* Added support for the Microsoft Translation service.
* Added support for comments in the LiveTranslate TMX format.
* Added debug messages in the JavaScript that can be logged by setting $egLiveTranslateDebugJS to true.

=== Version 1.0.1 ===
2011-05-27

* Added option (on by default) to store insignificant translations.
* Tweaked the LTF parser to allow specifying a word that should never be translated.

=== Version 1.0 ===
2011-05-26

* Fixed bug in the API.
* Fixed some JavaScript issues causing problems for IE users.
* Added missing right declaration. 

=== Version 0.6 ===
2011-04-21

* Added settings to specify per-namespace if the translation control should be shown or not.
* Use of FormatJson::encode instead of json_encode for compatibility with PHP5 < 5.2.

=== Version 0.5 ===
2011-01-16

* Modified the LT API to work with batches, so translation doesn't break for big translation memories.
* Fixed regex escaping issue that caused translations to stop when encountering certain characters in special words.

=== Version 0.4 ===
2011-01-14

* Added support for multiple translation memories.
* Added Special:LiveTranslate to manage the translation memories that should be used.
* Added support for remote translation memories. 
* Added support for the Translation Memory eXchange (TMX) format.
* Added Google branding, which is required when using the Google Translate API.